# feup-rcom-serialport_and_ftp

./: .gitignore  README.md
ftp/: CMakeLists.txt  ftp.c  ftp.h  main.c  url.c  url.h
lab1/: asynchronous.c  canonical.c  noncanonical.c  writecanonical.c  writenoncanonical.c
proj1/: .cproject  Doxyfile  Makefile  proj1.pro
proj1/include/: app.h  link.h  misc.h  physical.h
proj1/src/: app.c  link.c  main.c  misc.c  physical.c
